Added the PnP code to save and get the data.

--- a/src/webparts/employeeTimeTracking/components/EmployeeTimeTracking.module.scss
+++ b/src/webparts/employeeTimeTracking/components/EmployeeTimeTracking.module.scss
@@ -19,6 +19,17 @@
     font-weight: bolder;
   }
 
+  .spinner{
+    width: 100%;
+    text-align: center;
+  }
+
+  .containerHeader{
+    text-align: center;
+    font-size: 22px;
+    font-weight: bolder;
+  }
+
   .row {
     @include ms-Grid-row;
     @include ms-fontColor-white;
